Updated some serializers
